# person-validator

./: .gitignore  AGENTS.md  PLAYBOOKS.md  README.md  person-validator-api.service  person-validator-web.service  pyproject.toml
.claude/: settings.json
.github/issues/: auto-link-confirmation.md  epic.md  p0-enrichmentrun.md  p0-enrichmentrunner-redesign.md  p0-external-identifier-property.md  p0-personname-confidence-provenance.md  p0-rename-socialplatform.md  p1-wikidata-admin-ui.md  p1-wikidata-candidate-review.md  p1-wikidata-provider.md  p2-wikipedia-provider.md  p3-ballotpedia-provider.md  p3-opensecrets-provider.md  p3-orcid-provider.md  p3-viaf-provider.md  p4-cron-infrastructure.md
deploy/: person-validator-api.service  person-validator-enrichment-cron.service  person-validator-enrichment-cron.timer  person-validator-property-sync.service  person-validator-property-sync.timer  person-validator-web.service
docs/: API.md  COMMANDS.md  DESIGN-ENRICHMENT-PROVIDERS.md  PIPELINE.md  SCHEMA.md  SKILLS.md  local-development.md  wikidata-external-id-research.md  wikipedia-wikidata-api-survey.md
docs/plans/: 2026-03-09-cron-infrastructure-design.md  2026-03-10-enhanced-normalization-pipeline-design.md  2026-03-10-enhanced-normalization-pipeline-plan.md
skills/brainstorming/: SKILL.md
skills/reviewing-code-claude/: SKILL.md
skills/shipping-work-claude/: SKILL.md
src/api/: asgi.py  auth.py  db.py  main.py  schemas.py
src/core/: fields.py  key_validation.py  logging.py  matching.py  reading.py
src/web/: manage.py
tests/: conftest.py  helpers.py  test_key_validation.py  test_matching.py  test_reading.py  test_smoke.py
tests/api/: conftest.py  test_auth.py  test_db.py  test_find.py  test_main.py  test_read.py  test_versions.py
tests/core/: test_input_classification.py  test_logging.py  test_matching.py  test_name_parsing.py  test_nickname_expansion.py  test_pipeline.py  test_title_extraction.py
tests/web/: test_accounts_app.py  test_auth_backend.py  test_enrichment_run.py  test_external_identifier_property.py  test_keys.py  test_keys_admin.py  test_persons.py  (+7 more)
(+75 files in other folders)
