[project]
name = "person-validator"
version = "0.1.0"
description = "Web service and application to identify and enrich publicly accessible data about persons."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=6.0.2",
    "fastapi>=0.135.1",
    "gunicorn>=25.1.0",
    "python-dotenv>=1.2.2",
    "python-json-logger>=4.0.0",
    "python-ulid>=3.1.0",
    "requests>=2.32.5",
    "typing-extensions>=4.15.0",  # required by python-ulid but not declared upstream
    "uvicorn>=0.41.0",
    "whitenoise>=6.12.0",
]

[dependency-groups]
dev = [
    "anyio>=4.12.1",
    "httpx>=0.28.1",
    "pytest>=8.0",
    "pytest-cov>=6.0",
    "pytest-django>=4.12.0",
    "ruff>=0.9",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
DJANGO_SETTINGS_MODULE = "src.web.config.settings"
django_find_project = false
markers = [
    "integration: marks tests that hit live external services (deselect with -m 'not integration')",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
"**/migrations/*.py" = ["E501"]

[tool.coverage.run]
source = ["src"]

[tool.coverage.report]
show_missing = true
fail_under = 80

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
